# hpc-simctl

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.diagrams  README.md  SKILLS.md  SPEC.md  entrypoints.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: beach.md  emses.md  implement-adapter.md  implement-cli.md  implement-core.md  implement-launcher.md  implement-slurm.md  scaffold.md  spec-reviewer.md  test-writer.md
.claude/commands/: check.md  test-module.md
.claude/rules/: architecture.md  commands.md  dev-workflow.md  gotchas.md  knowledge-layer.md
.claude/skills/check/: SKILL.md
.claude/skills/improve-harness/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/test-module/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: agent-project-flow.md  agent-user-guide.md  architecture.md  extending.md  get-started-with-agent.md  getting-started.md  knowledge-layer.md  project-flow.md  runops-intro.tex  simulator-kb-spec.md  src-structure.md  toml-reference.md
examples/beach/: campaign.toml  launchers.toml  simproject.toml  simulators.toml
examples/emses/: campaign.toml  launchers.toml  simproject.toml  simulators.toml
schemas/: campaign.json  case.json  launchers.json  manifest.json  runops.json  simproject.json  simulators.json  survey.json
scripts/: diagram_utils.py  generate_agent_project_flow.py  generate_architecture_diagrams.py  render_diagrams_in_docker.py
src/runops/: __init__.py
src/runops/adapters/: __init__.py  base.py  generic.py  registry.py
src/runops/cli/: __init__.py  analyze.py  clone.py  config.py  context.py  create.py  dashboard.py  extend.py  history.py  init.py  jobs.py  knowledge.py  list.py  log.py  main.py  manage.py  new.py  notes.py  regenerate.py  retry.py  run_lookup.py  setup.py  status.py  submit.py  update.py  update_harness.py  update_refs.py
src/runops/core/: __init__.py  actions.py  analysis.py  campaign.py  case.py  context.py  discovery.py  environment.py  exceptions.py  knowledge.py  knowledge_source.py  manifest.py  project.py  provenance.py  publication.py  retry.py  (+6 more)
src/simctl/: __init__.py
tests/: conftest.py
tests/fixtures/: sample_case.toml  sample_launchers.toml  sample_manifest.toml  sample_simproject.toml  sample_simulators.toml  sample_survey.toml
tests/test_adapters/: test_beach.py  test_emses.py  test_generic.py  test_namelist.py  test_registry.py  test_toml_utils.py
tests/test_cli/: test_analyze.py  test_clone.py  test_config.py  test_context_cli.py  test_create.py  test_dashboard.py  test_extend.py  test_history.py  test_init.py  test_jobs.py  test_knowledge.py  test_list.py  test_log.py  test_main.py  test_manage.py  test_new.py  test_notes.py  test_regenerate.py  test_retry.py  test_setup.py  test_status.py  test_submit.py  test_update.py  test_update_harness.py  test_update_refs.py
tests/test_core/: test_action_contract.py  test_actions.py  test_analysis.py  test_case.py  test_context.py  test_discovery.py  test_knowledge_source.py  test_manifest.py  test_project.py  test_provenance.py  test_retry.py  test_run.py  test_run_creation.py  test_site.py  test_state.py  test_survey.py
tests/test_e2e/: test_bootstrap.py
tests/test_harness/: test_claude.py  test_codex.py
tests/test_launchers/: test_launcher_base.py  test_mpiexec.py  test_mpirun.py  test_srun.py
tests/test_slurm/: test_jobgen.py  test_slurm_query.py  test_slurm_submit.py
(+187 files in other folders)
