[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runops"
version = "0.2.0"
description = "HPC simulation run management CLI tool for Slurm-based environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "tomlkit>=0.13",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
runops = "runops.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/runops"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "runops/_data/README.md"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "tomli>=2.4.1",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TC",
    "RUF",
]
ignore = [
    "B008",   # typer uses function calls in argument defaults by design
    "TC001",  # moving first-party imports into TYPE_CHECKING breaks runtime
    "TC003",  # moving stdlib imports into TYPE_CHECKING blocks is not needed here
    "UP045",  # Optional[X] required for typer compatibility with Python 3.10
]

[tool.ruff.lint.isort]
known-first-party = ["runops"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
# Scaffolded summarize.py files under templates/adapters/ are reference
# implementations copied into user projects.  They depend on third-party
# scientific stacks (numpy, pandas, matplotlib, emout, beach) that are
# intentionally not in runops's own dependencies.
exclude = [
    "^src/runops/templates/adapters/.*/summarize\\.py$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
